@@ -86,6 +86,8 @@ followed by 0.6.3.
 
   SPECIAL NOTES:
 
+  * JAMWiki now requires Servlet 2.5 and JSP 2.1.  Java 5 has been required
+    since JAMWiki 0.8, so this change should be transparent to most users.
   * This release updates the default StyleSheet topic.  See below for
     instructions on manaully updating this topic with the new styles.
   * The /WEB-INF/spam-blacklist.txt file and the
