@@ -125,9 +125,9 @@
 				<version>1.4.1</version>
 			</dependency>
 			<dependency>
-				<groupId>javax.servlet</groupId>
+				<groupId>javax.servlet.jsp</groupId>
 				<artifactId>jsp-api</artifactId>
-				<version>2.0</version>
+				<version>2.1</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -138,7 +138,7 @@
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>servlet-api</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
